# glow

./: .gitignore
lib/Backends/CevaSPF2/: CMakeLists.txt  CevaSPF2Backend.cpp  CevaSPF2Backend.h  CevaSPF2DeviceManager.cpp  CevaSPF2DeviceManager.h  CevaSPF2Factory.cpp  CevaSPF2Function.cpp  CevaSPF2Function.h  CevaSPF2LLVMIRGen.cpp  CevaSPF2LLVMIRGen.h  Transforms.cpp
lib/Backends/CevaSPF2/ClassGen/: CMakeLists.txt  CevaSPF2SpecificInstrs.h  CevaSPF2SpecificInstrsVerification.h  CevaSPF2SpecificNodes.h  CevaSPF2SpecificNodesVerification.h
lib/Backends/CevaSPF2/ONNX/: SPF2ONNXModelWriter.cpp
lib/Backends/CevaSPF2/tests/: CPUBackendCorrectnessTest.cpp  CPUDeferredWeightLoaderTest.cpp  CPUDeviceManagerTest.cpp  CPUGraphOptzTest.cpp  CPUMLTest.cpp  CPUOperatorTest.cpp  CPURecommendationSystemTest.cpp
lib/Backends/SPF2/: CMakeLists.txt  SPF2Backend.cpp  SPF2Backend.h  SPF2DeviceManager.cpp  SPF2DeviceManager.h  SPF2Factory.cpp  SPF2Function.cpp  SPF2Function.h  SPF2LLVMIRGen.cpp  SPF2LLVMIRGen.h  Transforms.cpp
lib/Backends/SPF2/ClassGen/: CMakeLists.txt  SPF2SpecificInstrs.h  SPF2SpecificInstrsVerification.h  SPF2SpecificNodes.h  SPF2SpecificNodesVerification.h
lib/Backends/SPF2/ONNX/: SPF2ONNXModelWriter.cpp
lib/Backends/SPF2/libjit_spf2/: libjit_spf2_conv.cpp
lib/Backends/SPF2/libobj_spf2/: Readme.md
lib/Backends/SPF2/tests/: CPUGradCheckTest.cpp  CPUHostManagerTest.cpp
lib/LLVMIRCodeGen/: BundleSaver.cpp  LLVMIRGen.cpp
